fixed facebook video embed getting extra height on mobile and tablet issue

--- a/assets/css/embedpress.css
+++ b/assets/css/embedpress.css
@@ -133,6 +133,15 @@
     .elementor-widget-container iframe {
         max-height: 100% !important;
     }
+    .elementor-widget-container .embedpress-facebook-vid-iframe {
+        max-height: inherit !important;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .elementor-widget-container .embedpress-facebook-vid-iframe {
+        max-height: 390px !important;
+    }
 }
 
 /*Meetup Event styling starts */
